# NBody

./: README.md  goals.txt
python/: basicN.py  optimizeN2.py  optimizeN3.py  optimizeNCollision.py
src/: BarnesHut2D.cpp  BarnesHut2D.hpp  CMakeLists.txt  Particle.hpp  Particle3D.hpp  main.cpp  main2D.cpp  main_barneshut2d.cpp
